정리: JDBC 드라이버 생성 경고 제거